--- a/index.html
+++ b/index.html
@@ -55,6 +55,120 @@
                 <button>Learn More</button>
             </div>
         </div>
+
+        <div class="explore">
+            <h1>Explore More</h1>
+            <ul class="explore-nav">
+                <li class="active-2">Cake</li>
+                <li>Muffins</li>
+                <li>Croissant</li>
+                <li>Bread</li>
+                <li>Tart</li>
+                <li>Favorite</li>
+            </ul>
+
+            <div class="explore-imgs">
+                <img src="img/expolre/ex1.png" alt="" height="250">
+                <img src="img/expolre/ex2.png" alt="" height="250">
+                <img src="img/expolre/ex3.png" alt="" height="250">
+                <img src="img/expolre/ex4.png" alt="" height="250">
+                <img src="img/expolre/ex5.png" alt="" height="250">
+                <img src="img/expolre/ex6.png" alt="" height="250">
+            </div>
+
+
+        </div>
+
     </section>
+
+    <section class="about">
+        <div class="about-img">
+            <h1>About Us</h1>
+            <p>Suspendisse ac rhoncus nisl, <br> eu tempor urna. Curabitur vel <br> bibenjgg.</p>
+            <div class="btn-about-img">
+                <button>Learn More</button>
+            </div>
+        </div>
+
+
+        <div class="Featured">
+            <h1>Featured Treats</h1>
+
+            <div class="featured-img">
+                <div class="img-box-one">
+                    <img src="img/about/f1.png" alt="" height="230">
+                    <div class="img-box-text">
+                        <h3>Puff Pastry </h3>
+                        <h3>£7.99</h3>
+                    </div>
+                </div>
+
+                <div class="img-box-one">
+                    <img src="img/about/f2.png" alt="" height="230">
+                    <div class="img-box-text">
+                        <h3>Doughnuts</h3>
+                        <h3>£7.99</h3>
+                    </div>
+                </div>
+
+                <div class="img-box-one">
+                    <img src="img/about/f3.png" alt="" height="230">
+                    <div class="img-box-text">
+                        <h3>Brownies</h3>
+                        <h3>£7.99</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer>
+        <div class="footer-header">
+            <img src="img/logo.png" alt="">
+            <div class="icons">
+                <h3>Follow US</h3>
+                <div class="img-icons">
+                    <img src="img/footer/icon1.png" alt="" height="30">
+                    <img src="img/footer/icon2.png" alt="" height="30">
+                    <img src="img/footer/icon3.png" alt="" height="30">
+                    <img src="img/footer/icon4.png" alt="" height="30">
+                </div>
+            </div>
+        </div>
+
+        <div class="about-footer-control">
+        <div class="foter-about">
+            <h3>About Us</h3>
+            <p>(456) 789-12301 <br> info@modrino.co.uk <br> South 13th street <br> New york America</p>
+        </div>
+
+        <div class="foter-about">
+            <h3>Explore</h3>
+            <p>Home<br> Blog <br> Contact us<br> Services</p>
+        </div>
+
+
+        <div class="Recent">
+            <h3 class="recent-h3">Recent News</h3>
+            <div class="new">
+                <img src="img/footer/n1.png" alt="" height="50">
+                <div class="text">
+                <p>June 14,2024</p>
+                <h3>Puff pastry bliss.</h3>
+                </div>
+            </div>
+
+            <div class="new">
+                <img src="img/footer/n2.png" alt="" height="50">
+                <div class="text">
+                <p>June 14,2024</p>
+                <h3>Puff pastry bliss.</h3>
+                </div>
+            </div>
+        </div>
+        </div>
+    </footer>
+
 </body>
 </html>
